<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Description">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_tool"
                style="@style/Label"
                android:text="@string/label_tool" />

            <TextView
                android:id="@+id/tool_description"
                style="@style/description"
                android:text="@string/description_tool" />

            <TextView
                android:id="@+id/label_strategy"
                style="@style/Label"
                android:text="@string/label_strategy" />

            <TextView
                android:id="@+id/label_case1"
                style="@style/Label_small"
                android:text="@string/label_case1" />

            <TextView
                android:id="@+id/case1"
                style="@style/description"
                android:text="@string/case1" />

            <TextView
                android:id="@+id/label_case2"
                style="@style/Label_small"
                android:text="@string/label_case2" />

            <TextView
                android:id="@+id/case2"
                style="@style/description"
                android:text="@string/case2" />

            <Button
                android:id="@+id/button"
                style="@style/Button"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style"
                android:onClick="Next"
                android:text="了解" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>